@@ -19,7 +19,7 @@ Authors@R: c(
 License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
 Depends:
-    R (> 3.3.0)
+    R (>= 3.2.0)
 Imports:
     R6 (>= 2.0.1),
     checkmate (>= 1.6.2),
