@@ -47,6 +47,7 @@ export(templateQuantityType)
 export(thermalCyclingConditionsType)
 export(xRefType)
 import(checkmate)
+import(data.table)
 import(dplyr)
 import(pipeR)
 import(rlist)
