@@ -1,6 +1,7 @@
-Changes from Version 0.9-2 to 0.9-3 [July 12 2016]
+Changes from Version 0.9-2 to 0.9-3 [July 15 2016]
 * migration to xml2 instead of XML
 * start migration from plyr to rlist
+* AsTable works much faster and returns data.table
 
 Changes from Version 0.9-1 to 0.9-2 [September 09 2015]
 * GUI beta version
